Bug 142061 - macOS: Calc UI: Display anomalies when resizing columns
Summary: macOS: Calc UI: Display anomalies when resizing columns
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.1.0.3 release
Hardware: x86-64 (AMD64) macOS (All)
: medium normal
Assignee: Thorsten Wagner
URL:
Whiteboard: target:7.2.0 target:7.1.5
Keywords: bibisected, bisected, regression
: 142197 142280 142313 (view as bug list)
Depends on:
Blocks: HiDPI
  Show dependency treegraph
 
Reported: 2021-05-03 15:49 UTC by smurf
Modified: 2021-11-01 08:33 UTC (History)
8 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
macOS 11.3.1 LO 7.1.3.2 (148.39 KB, image/png)
2021-05-10 07:49 UTC, steve
Details
screenshot of display anomaly - size and shift checked in respect to origin (625.81 KB, image/jpeg)
2021-05-10 22:08 UTC, tymcik
Details

Note You need to log in before you can comment on or make changes to this bug.
Description smurf 2021-05-03 15:49:17 UTC
Description:
In Calc, when I resize a column (click on the divider between columns and drag to change its width), there are some significant display anomalies, even before I start to drag. This started (I think) with version 7.0, and persists in 7.1.2.2. Mac Catalina. It happens every time I resize any column in any spreadsheet. 

The bug happens even if I create a new account on my Mac and run LibreOffice from that new account, with default settings in OS & LO.

See this discussion, which includes a screenshot. https://ask.libreoffice.org/en/question/306556/display-anomalies-when-resizing-columns-in-calc-mac-catalina/

Steps to Reproduce:
1.Click & hold on the line seperating two columns of data
2.The problem appears immediately
3.Move your mouse around it gets worse.
4.When you let go of the mouse button the columns have been resized and things look normal again.

Actual Results:
Display anomalies appear when attempting to drag to resize columns

Expected Results:
The columns should resize as you drag, without obscuring the contents of any of the columns.


Reproducible: Always


User Profile Reset: No



Additional Info:
According to Apple, "OpenGL was deprecated in macOS 10.14." See <https://developer.apple.com/library/archive/documentation/GraphicsImaging/Conceptual/OpenGL-MacProgGuide/opengl_pg_concepts/opengl_pg_concepts.html>
Comment 1 smurf 2021-05-04 02:49:36 UTC
I'm running LO 7.1.0.3 on another machine, with MacOS Mojave; same problem.
Comment 2 steve 2021-05-10 07:49:00 UTC
Thanks for the report - confirmed, screenshot attached
Version: 7.1.3.2 / LibreOffice Community
Build ID: 47f78053abe362b9384784d31a6e56f8511eb1c1
CPU threads: 8; OS: Mac OS X 10.16; UI render: default; VCL: osx
Locale: de-DE (de_DE.UTF-8); UI: en-US
Calc: threaded
Comment 3 steve 2021-05-10 07:49:18 UTC
Created attachment 171811 [details]
macOS 11.3.1 LO 7.1.3.2
Comment 4 Alex Thurgood 2021-05-10 15:38:59 UTC
*** Bug 142197 has been marked as a duplicate of this bug. ***
Comment 5 Alex Thurgood 2021-05-10 15:40:36 UTC
I can also reproduce this with

Version: 7.1.2.3 / LibreOffice Community (Collabora AppStore download)
Build ID: a393d9064b7eb849da7f488ab43f56a404be32ae
CPU threads: 8; OS: Mac OS X 11.3; UI render: default; VCL: osx
Locale: fr-FR (fr_FR.UTF-8); UI: fr-FR
Calc: threaded


I get white blanking out of the columns over which I'm dragging the column boundary.

In other words the redraw is incorrect.

Not just limited to Catalina, I see this also on BigSur.
Comment 6 tymcik 2021-05-10 22:08:43 UTC
Created attachment 171840 [details]
screenshot of display anomaly - size and shift checked in respect to origin
Comment 7 tymcik 2021-05-10 22:12:09 UTC
I posted the duplicate report 142197
I installed LO 7.1.2.2 two days ago, with version 6.xxx I had no problem of that kind.

My config: Macbook Pro Retina late 2012, OS X 10.14.6 Mojave, dark appearance.

For tracking of the bug: it shows either blank or the area left and down of the originating pixel where you place your cursor, enlarged by 400% right & down to the bottom menu strip, tinted pinkish grey with lessened contrast.

See screenshot above, checked in PS respectively Affinity Photo
Comment 8 steve 2021-05-11 13:42:13 UTC
Problem happens independently of dark / light system mode.
Seems to be a general macOS problem as at least macOS 10.14, 10.15 and 11 are affected.
Comment 9 steve 2021-05-14 22:25:19 UTC
*** Bug 142280 has been marked as a duplicate of this bug. ***
Comment 10 steve 2021-05-14 22:36:25 UTC
adding keyword regression as this is not reproducible in 7.0.6.2.
Comment 11 Chris Shaw 2021-05-14 22:45:17 UTC Comment hidden (obsolete)
Comment 12 Chris Shaw 2021-05-14 22:45:26 UTC Comment hidden (obsolete)
Comment 13 Aron Budea 2021-05-14 22:52:03 UTC
There's possible contradiction between description and comment 10: "This started (I think) with version 7.0" vs. "this is not reproducible in 7.0.6.2".
Perhaps it's just a lapse of memory from the reporter, but it might mean the bug could depend on something else as well.
Comment 14 Chris Shaw 2021-05-15 11:00:32 UTC
I've just retested and I can confirm that the bug is NOT present in 7.0.6.2

Version: 7.0.6.2
Build ID: 144abb84a525d8e30c9dbbefa69cbbf2d8d4ae3b
CPU threads: 4; OS: Mac OS X 10.14.6; UI render: default; VCL: osx
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded

but is in 7.1.3.2 with identical configurations

Version: 7.1.3.2 / LibreOffice Community
Build ID: 47f78053abe362b9384784d31a6e56f8511eb1c1
CPU threads: 4; OS: Mac OS X 10.14.6; UI render: default; VCL: osx
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded

Also note that resizing rows is affected too, not just columns
Comment 15 Aron Budea 2021-05-15 12:59:53 UTC
If someone with an affected system could bibisect this, it would be very helpful. It involves downloading a fairly large git repository (~6-9 GB), and running `git bisect` on it. The general instructions are at [1], while the repository that should be used here is 'bibisect-mac64-7.1' at [2].

[1] https://wiki.documentfoundation.org/QA/Bibisect
[2] https://wiki.documentfoundation.org/QA/Bibisect/macOS
Comment 16 Aron Budea 2021-05-15 13:03:34 UTC
(In reply to Aron Budea from comment #15)
> helpful. It involves downloading a fairly large git repository (~6-9 GB),
To be precise, it's a repository of binary builds, the actual 'git bisect' part consists of trying to reproduce the bug ~12 times with the prebuilt binaries.
Comment 17 Chris Shaw 2021-05-15 15:32:02 UTC
(In reply to Aron Budea from comment #15)
> If someone with an affected system could bibisect this, it would be very
> helpful. It involves downloading a fairly large git repository (~6-9 GB),
> and running `git bisect` on it. The general instructions are at [1], while
> the repository that should be used here is 'bibisect-mac64-7.1' at [2].
> 
> [1] https://wiki.documentfoundation.org/QA/Bibisect
> [2] https://wiki.documentfoundation.org/QA/Bibisect/macOS

I'm on it. The initial clone is taking hours though
Comment 18 Chris Shaw 2021-05-15 16:24:41 UTC
Regression does not appear in latest version of bibisect-mac64-7.1 and must be younger

Version: 7.1.0.0.beta1+
Build ID: d5e786d78d2f72a39f02746d6e0faa04da72c60a
CPU threads: 4; OS: Mac OS X 10.14.6; UI render: GL; VCL: osx
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded


The suggested command gives the following though:

> git checkout latest
error: pathspec 'latest' did not match any file(s) known to git
Comment 19 Aron Budea 2021-05-15 16:40:57 UTC
(In reply to Chris Shaw from comment #18)
> Regression does not appear in latest version of bibisect-mac64-7.1 and must
> be younger
That's unfortunate, here's the 7.2 bibisect repo, could you give that a try as well?
https://bibisect.libreoffice.org/mac64-7.2

> The suggested command gives the following though:
> 
> > git checkout latest
> error: pathspec 'latest' did not match any file(s) known to git
Right, since these repos tend to be open-ended, there's no 'latest' tag, and the branch name, 'master' can be used instead, ie. 'git bisect master oldest' and 'git checkout master'.
Comment 20 Chris Shaw 2021-05-15 21:13:51 UTC
 73381f7077e114b39dc2c46344d0366c7254de2e is the first bad commit
commit 73381f7077e114b39dc2c46344d0366c7254de2e
Author: libreoffice <libreoffice@libreoffices-Mac-mini.local>
Date:   Fri Mar 26 12:32:18 2021 +0100

    source 1a167625314bf36b735176ed488e6ba9b5e9b675
    
    source 1a167625314bf36b735176ed488e6ba9b5e9b675

:040000 040000 61496b3d581f56e8af7144fd30a26de94f5c3680 3de219728373e970a373639ef731d8fd4949a0db M	LibreOffice.app





# bad: [747d79f036279aa26e2bd1bed1f9609b92aceacf] source 63401011324485bf14c824f7a4c9fc7db7444810
# good: [7ae9dc0eb055b3d88573a247cf3f756b06ad5cad] source 738bcf5e9a8c443d60c29c3a8068e8c16c72638a
git bisect start 'master' 'oldest'
# bad: [5fb3ad7597c71028eef18871eb3f2c6211354b9b] source ffe7fd5c3f3de474b201fbb1e25b8251cb13574d
git bisect bad 5fb3ad7597c71028eef18871eb3f2c6211354b9b
# good: [afb3ccb3520eb4fd2f2721feb848c0c6af63c9d9] source 54b5e6b4e083ce7a71e16ef622753898f38dc8ab
git bisect good afb3ccb3520eb4fd2f2721feb848c0c6af63c9d9
# bad: [1a018b5323a37c0f69f1d08cb74ed36b859f07ff] source d03b43fdb70ee975f4054bd49376179f792aa013
git bisect bad 1a018b5323a37c0f69f1d08cb74ed36b859f07ff
# good: [ac34212bcae82ca6c5139df01617eaeb53f46999] source 4bbbd836720b2961d0ca28ea32827a5e21977c23
git bisect good ac34212bcae82ca6c5139df01617eaeb53f46999
# good: [5ffa6a070ff8170bccb530b4b0be00cb8bd1877e] source 6aabffcfc1e0323280353d2e5120e36ae55fea5a
git bisect good 5ffa6a070ff8170bccb530b4b0be00cb8bd1877e
# good: [c4b3d927f96cf297ef6faf1032c0b5f97f7241a5] source 00d268422d0c1682adaf59fca6f60f35a9d5f221
git bisect good c4b3d927f96cf297ef6faf1032c0b5f97f7241a5
# good: [b41b8ad2ab38dfa1a2cb6bde948f308d8c663822] source 2da4f92666caa11ab39f45d9807af883a3c83c79
git bisect good b41b8ad2ab38dfa1a2cb6bde948f308d8c663822
# bad: [0c2726a68730455f5cd8416568d6bf6700fc5b42] source fdcf4418e9acfe4e95000b9d12a182d6702d42b6
git bisect bad 0c2726a68730455f5cd8416568d6bf6700fc5b42
# good: [3acbd884703af8a97e2b7b8c98efde3ffa43a07d] source 25d905d7f88779eecf3776f692efe5539730fbef
git bisect good 3acbd884703af8a97e2b7b8c98efde3ffa43a07d
# bad: [0dcec73b5824812ebf786dc910a001d4b08791de] source e7ace1d043cc8bdf6c03097932a00cbbdc3cf557
git bisect bad 0dcec73b5824812ebf786dc910a001d4b08791de
# good: [2538fbd480d71ad492642b8b02792cbdeda42a29] source 5bd90f7f5852056342f1a81a1285b474d468eadd
git bisect good 2538fbd480d71ad492642b8b02792cbdeda42a29
# bad: [deab522b3aa90a43f9b3c703894e8a014b08b33f] source 058ad4b900b5e0ee902f3e89ed121c2b5f8c58f1
git bisect bad deab522b3aa90a43f9b3c703894e8a014b08b33f
# bad: [73381f7077e114b39dc2c46344d0366c7254de2e] source 1a167625314bf36b735176ed488e6ba9b5e9b675
git bisect bad 73381f7077e114b39dc2c46344d0366c7254de2e
# first bad commit: [73381f7077e114b39dc2c46344d0366c7254de2e] source 1a167625314bf36b735176ed488e6ba9b5e9b675
Comment 21 Aron Budea 2021-05-15 21:36:19 UTC
(In reply to Chris Shaw from comment #20)
>     source 1a167625314bf36b735176ed488e6ba9b5e9b675
Great, thanks! The source sha is the actual source commit hash. Adding CC: to Thorsten Wagner.

https://cgit.freedesktop.org/libreoffice/core/commit/?id=1a167625314bf36b735176ed488e6ba9b5e9b675
author		Thorsten Wagner <thorsten.wagner.4@gmail.com>	2021-01-10 23:49:25 +0100
committer	Tor Lillqvist <tml@collabora.com>	2021-01-17 19:21:15 +0100

tdf#138122 Add window scaling for retina displays on macOS
Comment 22 Thorsten Wagner 2021-05-16 11:58:38 UTC
I am able to reproduce and will take a look to fix the issue.
Comment 23 smurf 2021-05-18 17:06:54 UTC
(In reply to Aron Budea from comment #13)
> There's possible contradiction between description and comment 10: "This
> started (I think) with version 7.0" vs. "this is not reproducible in
> 7.0.6.2".
> Perhaps it's just a lapse of memory from the reporter, but it might mean the
> bug could depend on something else as well.

Confirming that I do not see the bug in 7.0.6.2. Sorry for the error in my original report.
Comment 24 Thorsten Wagner 2021-05-18 18:31:58 UTC
Root cause has been found, I am working on a fix.
Comment 25 Thorsten Wagner 2021-05-19 13:03:04 UTC
*** Bug 142313 has been marked as a duplicate of this bug. ***
Comment 26 Thorsten Wagner 2021-05-19 16:00:42 UTC
Patch submitted to Gerrit:

https://gerrit.libreoffice.org/c/core/+/115816
Comment 27 Commit Notification 2021-05-22 16:02:54 UTC
Thorsten Wagner committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2cce064e6bb570361c845f7b3d82960f89c70bb1

tdf#142061 Add window scaling to XOR emulation on macOS

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 28 steve 2021-05-25 09:15:53 UTC
Verified with Version: 7.2.0.0.alpha1+ / LibreOffice Community
Build ID: 49af7e22e61c2e5d440ad55cd362388983e128ae
CPU threads: 8; OS: Mac OS X 10.16 | 11.4; UI render: default; VCL: osx
Locale: de-DE (de_DE.UTF-8); UI: en-US
Calc: threaded

Thanks Thorsten for your persting efforts to make LibreOffice UI usable on macOS.
Comment 29 Chris Shaw 2021-05-25 10:30:42 UTC
Confirmed fixed in

Version: 7.2.0.0.alpha1+ / LibreOffice Community
Build ID: 49af7e22e61c2e5d440ad55cd362388983e128ae
CPU threads: 4; OS: Mac OS X 10.14.6; UI render: default; VCL: osx
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded

Thank you, Thorsten
Comment 30 Thorsten Wagner 2021-06-28 22:14:10 UTC
Backport to LO 7.1 submitted to Gerrit:

https://gerrit.libreoffice.org/c/core/+/118036
Comment 31 Commit Notification 2021-06-29 08:30:25 UTC
Thorsten Wagner committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/a396dde0907ad87ac928c9a1b9f7640a73910b17

tdf#142061 Consider window scaling for XOR drawing on macOS

It will be available in 7.1.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 32 Chris Shaw 2021-08-02 11:17:04 UTC
I can confirm this is fixed in

Version: 7.1.5.2 / LibreOffice Community
Build ID: 85f04e9f809797b8199d13c421bd8a2b025d52b5
CPU threads: 4; OS: Mac OS X 10.14.6; UI render: default; VCL: osx
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded
Comment 33 smurf 2021-08-04 22:15:39 UTC
Agreed that this is now fixed. Thank you to everyone involved.
Comment 34 Mehmet Rıza Saraç 2021-11-01 04:46:43 UTC
Problem still exists.

Libreoffice 7.2.2.2
Kubuntu 18.04
x86-64
Comment 35 Aron Budea 2021-11-01 08:33:00 UTC
(In reply to Mehmet Rıza Saraç from comment #34)
> Problem still exists.
> 
> Libreoffice 7.2.2.2
> Kubuntu 18.04
> x86-64
This was reported as a Mac-specific bug, and has been fixed. If you're facing something similar in a more recent version on Linux, it's not the same issue, and you should open a new bug report.